# bloom

./: .dockerignore  .env.dev  .env.dev.example  .env.prod.defaults  .env.prod.example  .env.staging.defaults  .eslintrc.js  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .trivyignore  DEV_SETUP.html  DEV_SETUP.md  DOCUMENTATION.md  Makefile  PROD_SETUP.html  PROD_SETUP.md  README  README.md  TROUBLESHOOTING.md  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  test_migration.sh  turbo.json
.github/: dependabot.yml
.serena/: project.yml
_WIKI/: README.md
bloomcli/: CHANGELOG.md  README.md  RELEASE_PROCESS.md  pyproject.toml
bloomcli/src/bloomcli/: __init__.py  auth.py  cli.py  credentials.py
bloomcli/src/bloomctl/: __init__.py  auth.py  cli.py  credentials.py  download.py
bloomcli/tests/: test_cli.py  test_credentials.py  test_download_images.py  test_download_metadata.py  test_download_scan.py  test_login.py
bloommcp/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
bloommcp/docs/: 2026-06-15-bloom-mcp-phase2-design.md  2026-06-15-bloom-mcp-phase2-persistence-design.md  2026-06-29-bloom-mcp-contributor-namespacing.md  local-validation.md  roadmap.md
bloommcp/docs/images/: .gitkeep
bloommcp/scripts/: live_persistence_smoke.py
bloommcp/source/: __init__.py  cluster_visualization.py  data_cleanup.py  experiment_utils.py  outlier_detection.py  supabase_client.py  trait_statistics.py  umap_embedding.py
bloommcp/src/bloom_mcp/: __init__.py  __main__.py  auth.py  cluster_visualization.py  clustering.py  cross_experiment_correlations.py  data_cleanup.py  data_utils.py  experiment_utils.py  outlier_detection.py  outlier_visualization.py  pca.py  server.py  supabase_client.py  trait_statistics.py  visualization.py
bloommcp/src/bloom_mcp/contract/: __init__.py  errors.py  models.py  provenance.py  wrap.py
bloommcp/src/bloom_mcp/data_access/: __init__.py  bucket_input_reader.py  fake_reader.py  ports.py  supabase_reader.py
bloommcp/src/bloom_mcp/result_store/: __init__.py  _artifacts.py  fake_store.py  ports.py  supabase_store.py
bloommcp/src/bloom_mcp/sections/: __init__.py  phenotyping_segmentation.py
bloommcp/src/bloom_mcp/sections/phenotyping_segmentation/: __init__.py  summarize_trait.py
bloommcp/src/bloom_mcp/storage/: __init__.py  analysis_dir.py  code_versions.py  manifest.py  schema.py  versioning.py  writer.py
bloommcp/src/bloom_mcp/tools/: _ports.py  _qc_shared.py  correlation_tools.py  pca_analysis_tool.py  qc_clean_tool.py  qc_inspect_tool.py  qc_tools.py  storage_tools.py  viz_tools.py
bloommcp/src/bloom_mcp/tools/workflows/: __init__.py  _helpers.py  _response.py  clustering.py  dimred.py  outlier.py  qc.py  stats.py
bloommcp/storage/: __init__.py  analysis_dir.py  code_versions.py  manifest.py  migration.py  schema.py  versioning.py  writer.py
bloommcp/tests/: conftest.py  test_analyze_result_types_importable.py  test_oracle.py  test_package_baseline.py  test_persistence_import_guard.py  test_sections_scaffold.py
bloommcp/tests/contract/: conftest.py  test_code_versions_installed_only.py  test_decorator_contract.py  test_environment_pointer.py  test_error_envelope.py  test_provenance_roundtrip.py  test_provenance_to_version_entry.py  test_schema_v3.py  test_seed_propagation.py  test_v2_backcompat.py
bloommcp/tests/data_access/: test_fake_reader.py  test_supabase_reader.py
bloommcp/tests/fixtures/: README.md  manifest_v2.json  turface_19_final_data.csv  turface_19_pca_golden.json  turface_19_qc_golden.json  turface_19_qc_inspect_golden.json  turface_19_raw_data.csv
bloommcp/tests/result_store/: test_fake_result_store.py  test_store_parity.py  test_supabase_result_store.py
bloommcp/tests/scripts/: test_live_persistence_smoke_logic.py
bloommcp/tests/tools/: test_pca_analysis_tool.py  test_qc_clean_tool.py  test_qc_inspect_tool.py
bloommcp/tests/workflows/: test_workflow_persistence.py
bloommcp/tools/: __init__.py  clustering_tools.py  dimred_tools.py  outlier_tools.py  qc_tools.py  stats_tools.py  storage_tools.py
bloommcp/tools/workflows/: __init__.py  _helpers.py  clustering.py  dimred.py  outlier.py  qc.py  stats.py
caddy/: Caddyfile  Dockerfile
contracts/: README.md  pin.json
docs/: agent-architecture-evolution.md
flask/: Dockerfile  app.py  config.py  pyproject.toml  requirements.txt  videoWriter.py
flask/static/: docs.html
langchain/: .dockerignore  Dockerfile  agent.py  config.py  deps.py  mcp_config.py  pyproject.toml  requirements.txt  schemas.py  server.py
minio/: Dockerfile
nginx/: copy.config  copy.config_2  nginx.conf.template
openspec/: cicd-proposal.md  project.md
scripts/: README.md  apply-env-secrets.sh  backfill_experiment_plans_to_progress_logs.sql  backfill_gene_candidates_from_excel.py  backfill_scrna_cluster_catalog.sql  backfill_scrna_cluster_colors.sql  backfill_scrna_dataset_ncells.sql  backup_v1_s3_to_box.py  check-uv-locks.py  check_health.py  contract_types.mjs  contract_types.test.mjs  create_bucket.py  deploy_run_supabase.sh  dev_init.ts  generate-env-config.sh  generate-secrets.sh  generateJWT_key.py  generate_JWT  generate_KEYS  import_orthogroups.py  init-db-roles.sh  init_dev.py  lint_cve_isolation.sh  lint_migrations.sh  load_test_data.py  migrate_embedtree.py  pre-deploy-check.sh  render_plate_videos.py  seed_cyl_mock_data.sql  seed_gravi_mock_data.sql  setup-env-secrets.sh  setup-env.sh  test_sse_stream.py  upload_scrna.py  upload_test_images.py  validate_env.sh  verify-stack.sh  verify_env_parity.py
supabase/: _seed.sql  config.toml.bak
test_data/: accessions.csv  assemblies.csv  cyl_camera_settings.csv  cyl_experiments.csv  cyl_images.csv  cyl_plants.csv  cyl_scanners.csv  cyl_scans.csv  cyl_scientists.csv  cyl_trait_sources.csv  cyl_waves.csv  gene_candidate_scientists.csv  gene_candidate_support.csv  gene_candidates.csv  genes.csv  people.csv  phenotypers.csv  species.csv
web/: README.md  (+14 more)
(+801 files in other folders)
