[project]
name = "bloom-tests"
version = "0.1.0"
description = "Integration tests for Bloom v2"
requires-python = ">=3.11"

# Test-runner deps — pinned per the pin-python-deps convention (PR #126).
# Invoked in CI via `uv run --extra test pytest ...` rather than inline
# `--with` flags so the pins are the single source of truth.
[project.optional-dependencies]
test = [
    "pytest>=8.3,<9",
    "psycopg[binary]==3.3.3",
    # required by tests/integration/* — they sys.path-import langchain agent
    # and bloommcp modules and need these resolvable at collection time.
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    # required by tests/unit/test_ci_workflow_uv_conventions.py — parses
    # .github/workflows/*.{yml,yaml} via yaml.safe_load to enforce uv conventions.
    "pyyaml>=6",
    # imported at module-level in langchain/helpers/plot_renderer.py and
    # langchain/tools/cyl_viz_tools.py, both transitively pulled in when
    # tests import from langchain.tools.cyl_tools.
    "matplotlib>=3.8",
    # required by tests/unit/test_supabase_client.py — the bloommcp helper
    # under test imports both at module level.
    "pandas>=2.0",
    "supabase>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests that require the compose stack to be running",
]
