[project]
name = "bloommcp"
version = "0.1.0"
description = "Bloom MCP server with access to the bloom database"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    # Security floors for transitive FastAPI-stack deps (see issue #311):
    # pin past upstream CVE fix versions. Open floors per repo convention.
    "cryptography>=48.0.1",
    "python-multipart>=0.0.31",
    "starlette>=1.1.0",
    # Supabase PostgREST + Storage client, used by source/supabase_client.py
    # for CSV exchange via the bloommcp-data bucket.
    "supabase>=2.0.0",
    # Data & analysis
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Dimensionality reduction
    "umap-learn>=0.5.0",
]
